mesh id added to LocalRayResult

--- a/src/otbullet/otbullet.vcxproj
+++ b/src/otbullet/otbullet.vcxproj
@@ -293,6 +293,7 @@
     <ClInclude Include="..\..\src\otbullet\physics_cfg.h" />
     <ClInclude Include="..\..\src\otbullet\sketch_debug_draw.h" />
     <ClInclude Include="..\..\src\otbullet\tree_batch.h" />
+    <ClInclude Include="shape_info_cfg.h" />
     <hpp Include="..\..\src\otbullet\otbullet.hpp">
       <FileType>hpp</FileType>
     </hpp>
