--- a/src/otbullet/otbullet.vcxproj
+++ b/src/otbullet/otbullet.vcxproj
@@ -270,6 +270,7 @@
     <ClCompile Include="..\..\src\otbullet\sketch_debug_draw.cpp" />
     <ClCompile Include="..\..\src\otbullet\tree_batch.cpp" />
     <ClCompile Include="..\..\src\otbullet\wrapper.cpp" />
+    <ClCompile Include="multithread_default_collision_configuration.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\comm\_build\msvc\2015\comm_static.vcxproj">
@@ -292,6 +293,8 @@
     <ClInclude Include="..\..\src\otbullet\physics_cfg.h" />
     <ClInclude Include="..\..\src\otbullet\sketch_debug_draw.h" />
     <ClInclude Include="..\..\src\otbullet\tree_batch.h" />
+    <ClInclude Include="multithread_default_collision_configuration.h" />
+    <ClInclude Include="shape_info_cfg.h" />
     <ClInclude Include="physics.h" />
     <hpp Include="..\..\src\otbullet\otbullet.hpp">
       <FileType>hpp</FileType>
