--- a/src/otbullet/otbullet.vcxproj.filters
+++ b/src/otbullet/otbullet.vcxproj.filters
@@ -24,4 +24,7 @@
   <ItemGroup>
     <None Include="..\..\src\otbullet\otbullet.inl" />
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="version.rc" />
+  </ItemGroup>
 </Project>
