--- a/src/otbullet/otbullet.vcxproj.filters
+++ b/src/otbullet/otbullet.vcxproj.filters
@@ -21,6 +21,7 @@
     <ClInclude Include="shape_info_cfg.h" />
     <ClInclude Include="physics.h" />
     <ClInclude Include="multithread_default_collision_configuration.h" />
+    <ClInclude Include="otflags.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\src\otbullet\otbullet.inl" />
