fixed flags for potential dynamic obj collisions

--- a/src/otbullet/otbullet.vcxproj
+++ b/src/otbullet/otbullet.vcxproj
@@ -328,6 +328,7 @@
     <ClInclude Include="..\..\src\otbullet\physics_cfg.h" />
     <ClInclude Include="..\..\src\otbullet\sketch_debug_draw.h" />
     <ClInclude Include="..\..\src\otbullet\tree_batch.h" />
+    <ClInclude Include="otflags.h" />
     <ClInclude Include="multithread_default_collision_configuration.h" />
     <ClInclude Include="shape_info_cfg.h" />
     <ClInclude Include="physics.h" />
