--- a/build3/vs2015/BulletCollision.vcxproj.filters
+++ b/build3/vs2015/BulletCollision.vcxproj.filters
@@ -45,9 +45,6 @@
     <ClInclude Include="..\..\src\BulletCollision\BroadphaseCollision\btDispatcher.h">
       <Filter>src\BulletCollision\BroadphaseCollision</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\BulletCollision\BroadphaseCollision\btMultiSapBroadphase.h">
-      <Filter>src\BulletCollision\BroadphaseCollision</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\BulletCollision\BroadphaseCollision\btOverlappingPairCache.h">
       <Filter>src\BulletCollision\BroadphaseCollision</Filter>
     </ClInclude>
@@ -414,6 +411,12 @@
     <ClInclude Include="..\..\src\BulletCollision\NarrowPhaseCollision\btVoronoiSimplexSolver.h">
       <Filter>src\BulletCollision\NarrowPhaseCollision</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\BulletCollision\CollisionShapes\btSdfCollisionShape.h">
+      <Filter>src\BulletCollision\CollisionShapes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\BulletCollision\CollisionShapes\btMiniSDF.h">
+      <Filter>src\BulletCollision\CollisionShapes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\BulletCollision\BroadphaseCollision\btAxisSweep3.cpp">
@@ -432,9 +435,6 @@
       <Filter>src\BulletCollision\BroadphaseCollision</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\BulletCollision\BroadphaseCollision\btDispatcher.cpp">
-      <Filter>src\BulletCollision\BroadphaseCollision</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\BulletCollision\BroadphaseCollision\btMultiSapBroadphase.cpp">
       <Filter>src\BulletCollision\BroadphaseCollision</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\BulletCollision\BroadphaseCollision\btOverlappingPairCache.cpp">
@@ -700,6 +700,12 @@
     </ClCompile>
     <ClCompile Include="..\..\src\BulletCollision\NarrowPhaseCollision\btVoronoiSimplexSolver.cpp">
       <Filter>src\BulletCollision\NarrowPhaseCollision</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\BulletCollision\CollisionShapes\btSdfCollisionShape.cpp">
+      <Filter>src\BulletCollision\CollisionShapes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\BulletCollision\CollisionShapes\btMiniSDF.cpp">
+      <Filter>src\BulletCollision\CollisionShapes</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
